pkg/lang/testdata/ub/manifest/invalid/requires-bare-key.ub
requires: { core: 'v0.1.0' }
